[package]
name = "energymon-default-sys"
version = "0.1.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "FFI bindings to libenergymon-default-static"
license = "MIT"
homepage = "https://github.com/energymon/energymon-sys"
repository = "https://github.com/energymon/energymon-sys"
keywords = ["energymon", "default", "energy", "monitoring", "bindings"]

build = "build.rs"

[lib]
name = "energymon_default_sys"
path = "lib.rs"

[dependencies]
libc = "0.1"

[dependencies.energymon-sys]
path = "../energymon-sys"

[build-dependencies]
pkg-config = "0.3.2"
