[package]
name = "energymon-odroid-ioctl-sys"
version = "0.1.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "FFI bindings to libenergymon-odroid-ioctl"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/energymon/energymon-sys"
repository = "https://github.com/energymon/energymon-sys"
keywords = ["energymon", "odroid", "ioctl", "energy", "monitoring", "bindings"]

links = "energymon-odroid-ioctl"
build = "build.rs"

[lib]
name = "energymon_odroid_ioctl_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"

[dependencies.energymon-sys]
path = "../energymon-sys"

[build-dependencies]
energymon-builder = { path = "../energymon-builder" }
