[package]
name = "energymon-odroid-sys"
version = "0.1.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "FFI bindings to libenergymon-odroid-static"
license = "MIT"
homepage = "https://github.com/connorimes/energymon-sys"
repository = "https://github.com/connorimes/energymon-sys"
keywords = ["energymon", "odroid", "energy", "monitoring", "bindings"]

build = "build.rs"

[lib]
name = "energymon_odroid_sys"
path = "lib.rs"

[dependencies]
libc = "0.1"

[dependencies.energymon-sys]
path = "../energymon-sys"

[build-dependencies]
pkg-config = "0.3.2"
