[package]
name = "energymon-osp-polling-sys"
version = "0.3.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "FFI bindings to libenergymon-osp-polling"
license = "MIT/Apache-2.0"
homepage = "https://github.com/energymon/energymon-sys"
repository = "https://github.com/energymon/energymon-sys"
keywords = ["energymon", "osp-polling", "energy", "monitoring", "bindings"]

links = "energymon-osp-polling"
build = "build.rs"

[lib]
name = "energymon_osp_polling_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"

[dependencies.energymon-sys]
path = "../energymon-sys"

[build-dependencies]
energymon-builder = { path = "../energymon-builder" }
