[package]
name = "energymon-rapl-sys"
version = "0.3.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "FFI bindings to libenergymon-rapl"
license = "MIT/Apache-2.0"
homepage = "https://github.com/energymon/energymon-sys"
repository = "https://github.com/energymon/energymon-sys"
keywords = ["energymon", "rapl", "energy", "monitoring", "bindings"]

links = "energymon-rapl"
build = "build.rs"

[lib]
name = "energymon_rapl_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"

[dependencies.energymon-sys]
path = "../energymon-sys"

[build-dependencies]
energymon-builder = { path = "../energymon-builder" }
