[package]
name = "energymon-shmem-sys"
version = "0.3.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "FFI bindings to libenergymon-shmem"
license = "MIT/Apache-2.0"
homepage = "https://github.com/energymon/energymon-sys"
repository = "https://github.com/energymon/energymon-sys"
keywords = ["energymon", "shmem", "energy", "monitoring", "bindings"]

links = "energymon-shmem"
build = "build.rs"

[lib]
name = "energymon_shmem_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"

[dependencies.energymon-sys]
path = "../energymon-sys"

[build-dependencies]
energymon-builder = { path = "../energymon-builder" }
