[package]
name = "energymon-sys"
version = "0.3.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "FFI bindings to libenergymon implementations"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/energymon/energymon-sys"
repository = "https://github.com/energymon/energymon-sys"
keywords = ["energymon", "energy", "monitoring", "bindings"]

[lib]
name = "energymon_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"
