[package]
name = "energymon-wattsup-sys"
version = "0.3.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "FFI bindings to libenergymon-wattsup"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/energymon/energymon-sys"
repository = "https://github.com/energymon/energymon-sys"
keywords = ["energymon", "wattsup", "energy", "monitoring", "bindings"]

links = "energymon-wattsup"
build = "build.rs"

[lib]
name = "energymon_wattsup_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"

[dependencies.energymon-sys]
path = "../energymon-sys"

[build-dependencies]
energymon-builder = { path = "../energymon-builder" }
